B&L QA/objects/Credit_Dept_Communication__c.object
<CustomObject>
    <description>Used by the Credit Department to keep a record of their communications with customers. EMEAVC.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer this communication relates to. EMEA VC.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Dept Communications</relationshipLabel>
        <relationshipName>Credit_Dept_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <description>Details the type of communication. EMEA VC.</description>
        <label>Communication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bankrupt / Attorney</fullName>
                </value>
                <value>
                    <fullName>Cheque Payment</fullName>
                </value>
                <value>
                    <fullName>Collection Efforts</fullName>
                </value>
                <value>
                    <fullName>Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Credit Note Query</fullName>
                </value>
                <value>
                    <fullName>CSD Conversation</fullName>
                </value>
                <value>
                    <fullName>CSD Pricing Conversation</fullName>
                </value>
                <value>
                    <fullName>CSD Service Note</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Email Address</fullName>
                </value>
                <value>
                    <fullName>Incorrect P.O</fullName>
                </value>
                <value>
                    <fullName>Invoices</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>P.O.D Request</fullName>
                </value>
                <value>
                    <fullName>Payment Query</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Service Agreement Query</fullName>
                </value>
                <value>
                    <fullName>Wrong Freight Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>Main body of information regarding this communication. EMEA VC.</description>
        <label>Communication</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integrated_from_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be ticked when a conversation has been integrated from PS</description>
        <label>Integrated from PS</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Dept Communication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Communication Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Dept Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>